tests/baselines/reference/instantiateGenericClassWithWrongNumberOfTypeArguments.errors.txt
==== tests/cases/compiler/instantiateGenericClassWithWrongNumberOfTypeArguments.ts (2 errors) ====
    // it is always an error to provide a type argument list whose count does not match the type parameter list
    // both of these attempts to construct a type is an error
    
    class C<T> {
        x: T;
    }
    
    var c = new C<number, number>();
                ~
!!! instantiateGenericClassWithWrongNumberOfTypeArguments.ts(8,13): error TS4027: Signature expected 1 type arguments, got 2 instead.
    
    class D<T, U> {
        x: T
        y: U
    }
    
    // BUG 794238
    var d = new D<number>();
                ~
!!! instantiateGenericClassWithWrongNumberOfTypeArguments.ts(16,13): error TS4027: Signature expected 2 type arguments, got 1 instead.